# gtkgreet

./: README.md  flake.nix  meson.build  run.sh  shell.nix
.VSCodeCounter/2025-07-20_09-29-12/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
assets/: styles.css
gtkgreet/: actions.c  actions.cpp  config.c  config.cpp  gtkgreet.c  gtkgreet.cpp  gtkgreet.h  main.c  main.cpp  meson.build  proto.c  window.c  window.h
gtkgreet/src/: actions.cpp  config.cpp  config.h  main.cpp  proto.h  safe.cpp  window.c
po/: meson.build
